--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
 <body>
-    <h1>test</h1>
-    <p>This is branch two</p>
+    <h2>Test 32</h2>
 </body>
 </html>
