--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
 <body>
     <h2>Test 32</h2>
     <h1>added from github</h1>
+    <p>test from github branch </p>
     <i>added a line from local </i>
     <h3> Using git pull </h3>
     <p>new fix</p>
